save muslimpro jan 2024 data into db using pyodbc

--- a/python/jupyter notebook/request_data_muslimpro.ipynb
+++ b/python/jupyter notebook/request_data_muslimpro.ipynb
@@ -9,7 +9,8 @@
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import pandas as pd\n",
-    "from io import StringIO"
+    "from io import StringIO\n",
+    "import pyodbc"
    ]
   },
   {
@@ -83,30 +84,29 @@
     "    df.loc[:,\"Isha'a\"] = pd.to_datetime(df[\"Isha'a\"], format=\"%H:%M\").dt.time\n",
     "    \n",
     "    df = df.rename(columns={ \"Unnamed: 0\": \"Date\", \"Dhuhr\": \"Zuhr\", \"Isha'a\": \"Isha\"})\n",
-    "    return df"
+    "    return df\n",
+    "\n",
+    "def insertDFtoDB(dfToInsert):\n",
+    "    try:\n",
+    "        connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "        conn = pyodbc.connect(connStr)\n",
+    "        cursor = conn.cursor()\n",
+    "\n",
+    "        for idx, row in dfToInsert.iterrows():\n",
+    "            cursor.execute(\"INSERT INTO [dbo].[t_time_prayer_source_3] ([time_date],[time_fajr],[time_zuhr],[time_asr],[time_maghrib],[time_isha]) VALUES (?,?,?,?,?,?)\", row[\"Date\"], row[\"Fajr\"], row[\"Zuhr\"], row[\"Asr\"], row[\"Maghrib\"], row[\"Isha\"])\n",
+    "\n",
+    "        conn.commit()\n",
+    "        cursor.close()\n",
+    "        conn.close()\n",
+    "\n",
+    "        print(\"SUCCESS! Done INSERT INTO database\")\n",
+    "    except:\n",
+    "        print(\"INSERT INTO database FAILED!\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "muslimProDataJan2024 = getDataFrameFromReq(urlStr, \"2024-01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfJan2024 = parseDFforDB(muslimProDataJan2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -457,373 +457,32 @@
        "30  2024-01-31  06:17:00  13:29:00  16:51:00  19:27:00  20:40:00"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "muslimProDataJan2024 = getDataFrameFromReq(urlStr, \"2024-01\")\n",
+    "dfJan2024 = parseDFforDB(muslimProDataJan2024)\n",
     "dfJan2024"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "muslimProDataFeb2024 = getDataFrameFromReq(urlStr, \"2024-02\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfFeb2024 = parseDFforDB(muslimProDataFeb2024)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Fajr</th>\n",
-       "      <th>Zuhr</th>\n",
-       "      <th>Asr</th>\n",
-       "      <th>Maghrib</th>\n",
-       "      <th>Isha</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-02-01</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:28:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2024-02-02</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:28:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2024-02-03</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:28:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2024-02-04</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:28:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2024-02-05</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:28:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2024-02-06</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2024-02-07</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:51:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2024-02-08</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2024-02-09</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2024-02-10</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>2024-02-11</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>2024-02-12</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2024-02-13</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:50:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2024-02-14</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:49:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2024-02-15</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:49:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2024-02-16</td>\n",
-       "      <td>06:19:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:49:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2024-02-17</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:49:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>2024-02-18</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:48:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>2024-02-19</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:48:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>2024-02-20</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:48:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>2024-02-21</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:47:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>2024-02-22</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:30:00</td>\n",
-       "      <td>16:47:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>2024-02-23</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:47:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>2024-02-24</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:46:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>2024-02-25</td>\n",
-       "      <td>06:18:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:46:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>2024-02-26</td>\n",
-       "      <td>06:17:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:45:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:39:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>2024-02-27</td>\n",
-       "      <td>06:17:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:45:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:38:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>2024-02-28</td>\n",
-       "      <td>06:17:00</td>\n",
-       "      <td>13:29:00</td>\n",
-       "      <td>16:44:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:38:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>2024-02-29</td>\n",
-       "      <td>06:17:00</td>\n",
-       "      <td>13:28:00</td>\n",
-       "      <td>16:44:00</td>\n",
-       "      <td>19:29:00</td>\n",
-       "      <td>20:38:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          Date      Fajr      Zuhr       Asr   Maghrib      Isha\n",
-       "0   2024-02-01  06:18:00  13:29:00  16:51:00  19:28:00  20:40:00\n",
-       "1   2024-02-02  06:18:00  13:30:00  16:51:00  19:28:00  20:40:00\n",
-       "2   2024-02-03  06:18:00  13:30:00  16:51:00  19:28:00  20:40:00\n",
-       "3   2024-02-04  06:18:00  13:30:00  16:51:00  19:28:00  20:40:00\n",
-       "4   2024-02-05  06:18:00  13:30:00  16:51:00  19:28:00  20:40:00\n",
-       "5   2024-02-06  06:18:00  13:30:00  16:51:00  19:29:00  20:40:00\n",
-       "6   2024-02-07  06:18:00  13:30:00  16:51:00  19:29:00  20:40:00\n",
-       "7   2024-02-08  06:18:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "8   2024-02-09  06:19:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "9   2024-02-10  06:19:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "10  2024-02-11  06:19:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "11  2024-02-12  06:19:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "12  2024-02-13  06:19:00  13:30:00  16:50:00  19:29:00  20:40:00\n",
-       "13  2024-02-14  06:19:00  13:30:00  16:49:00  19:29:00  20:40:00\n",
-       "14  2024-02-15  06:19:00  13:30:00  16:49:00  19:29:00  20:40:00\n",
-       "15  2024-02-16  06:19:00  13:30:00  16:49:00  19:29:00  20:40:00\n",
-       "16  2024-02-17  06:18:00  13:30:00  16:49:00  19:29:00  20:39:00\n",
-       "17  2024-02-18  06:18:00  13:30:00  16:48:00  19:29:00  20:39:00\n",
-       "18  2024-02-19  06:18:00  13:30:00  16:48:00  19:29:00  20:39:00\n",
-       "19  2024-02-20  06:18:00  13:30:00  16:48:00  19:29:00  20:39:00\n",
-       "20  2024-02-21  06:18:00  13:30:00  16:47:00  19:29:00  20:39:00\n",
-       "21  2024-02-22  06:18:00  13:30:00  16:47:00  19:29:00  20:39:00\n",
-       "22  2024-02-23  06:18:00  13:29:00  16:47:00  19:29:00  20:39:00\n",
-       "23  2024-02-24  06:18:00  13:29:00  16:46:00  19:29:00  20:39:00\n",
-       "24  2024-02-25  06:18:00  13:29:00  16:46:00  19:29:00  20:39:00\n",
-       "25  2024-02-26  06:17:00  13:29:00  16:45:00  19:29:00  20:39:00\n",
-       "26  2024-02-27  06:17:00  13:29:00  16:45:00  19:29:00  20:38:00\n",
-       "27  2024-02-28  06:17:00  13:29:00  16:44:00  19:29:00  20:38:00\n",
-       "28  2024-02-29  06:17:00  13:28:00  16:44:00  19:29:00  20:38:00"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SUCCESS! Done INSERT INTO database\n"
+     ]
     }
    ],
    "source": [
-    "dfFeb2024"
+    "# insertDFtoDB(dfJan2024)"
    ]
   }
  ],
