extract data for objective 2, split year 2024 data for test, the rest for train

--- a/python/objective 2/objective_2.ipynb
+++ b/python/objective 2/objective_2.ipynb
@@ -4,17 +4,417 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyodbc\n",
+    "import pandas as pd\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "plt.style.use('default')\n",
+    "\n",
+    "from warnings import\\\n",
+    "    filterwarnings as FilterOutWarnings\n",
+    "FilterOutWarnings(\"ignore\")\n",
+    "\n",
+    "from math import sqrt\n",
+    "from statsmodels.formula import\\\n",
+    "    api as sm\n",
+    "from scipy.stats import\\\n",
+    "    ttest_ind as T_test,\\\n",
+    "    f_oneway as F_test\n",
+    "from sklearn.metrics import\\\n",
+    "    mean_squared_error as MSE,\\\n",
+    "    mean_absolute_error as MAE,\\\n",
+    "    r2_score as R2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getDataFrameFromSqlServer(sql_select):\n",
+    "    if (len(sql_select) == 0 or sql_select == \"\"):\n",
+    "        return pd.DataFrame([])\n",
+    "    \n",
+    "    connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "    conn = pyodbc.connect(connStr)\n",
+    "    try:\n",
+    "        return pd.read_sql(sql=sql_select, con=conn)\n",
+    "    except Exception as ex:\n",
+    "        print(ex)\n",
+    "        return pd.DataFrame([])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_date</th>\n",
+       "      <th>time_fajr</th>\n",
+       "      <th>time_zuhr</th>\n",
+       "      <th>time_asr</th>\n",
+       "      <th>time_maghrib</th>\n",
+       "      <th>time_isha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>05:58:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>05:59:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>05:59:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>06:00:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2186</th>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:39:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2187</th>\n",
+       "      <td>2023-12-28</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2188</th>\n",
+       "      <td>2023-12-29</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2189</th>\n",
+       "      <td>2023-12-30</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2190</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2191 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time_date time_fajr time_zuhr  time_asr time_maghrib time_isha\n",
+       "0     2018-01-01  05:58:00  13:19:00  16:42:00     19:16:00  20:30:00\n",
+       "1     2018-01-02  05:58:00  13:20:00  16:42:00     19:16:00  20:31:00\n",
+       "2     2018-01-03  05:59:00  13:20:00  16:43:00     19:17:00  20:31:00\n",
+       "3     2018-01-04  05:59:00  13:21:00  16:43:00     19:17:00  20:32:00\n",
+       "4     2018-01-05  06:00:00  13:21:00  16:44:00     19:18:00  20:32:00\n",
+       "...          ...       ...       ...       ...          ...       ...\n",
+       "2186  2023-12-27  06:04:00  13:17:00  16:39:00     19:14:00  20:29:00\n",
+       "2187  2023-12-28  06:04:00  13:17:00  16:40:00     19:14:00  20:29:00\n",
+       "2188  2023-12-29  06:05:00  13:18:00  16:40:00     19:15:00  20:30:00\n",
+       "2189  2023-12-30  06:05:00  13:18:00  16:41:00     19:15:00  20:30:00\n",
+       "2190  2023-12-31  06:06:00  13:19:00  16:41:00     19:16:00  20:31:00\n",
+       "\n",
+       "[2191 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train = getDataFrameFromSqlServer\\\n",
+    "    (\"\"\"\n",
+    "        SELECT time_date, time_fajr, time_zuhr, time_asr, time_maghrib, time_isha \n",
+    "        FROM t_time_prayer_source_1 WITH(NOLOCK)\n",
+    "        WHERE time_date <= '2023-12-31'\n",
+    "        ORDER BY time_date ASC;\n",
+    "    \"\"\")\n",
+    "\n",
+    "df_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_date</th>\n",
+       "      <th>time_fajr</th>\n",
+       "      <th>time_zuhr</th>\n",
+       "      <th>time_asr</th>\n",
+       "      <th>time_maghrib</th>\n",
+       "      <th>time_isha</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-01-01</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-01-02</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-01-03</td>\n",
+       "      <td>06:07:00</td>\n",
+       "      <td>13:20:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:17:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-01-04</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:43:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:32:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-01-05</td>\n",
+       "      <td>06:08:00</td>\n",
+       "      <td>13:21:00</td>\n",
+       "      <td>16:44:00</td>\n",
+       "      <td>19:18:00</td>\n",
+       "      <td>20:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>361</th>\n",
+       "      <td>2024-12-27</td>\n",
+       "      <td>06:04:00</td>\n",
+       "      <td>13:17:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:14:00</td>\n",
+       "      <td>20:29:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>362</th>\n",
+       "      <td>2024-12-28</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:40:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>2024-12-29</td>\n",
+       "      <td>06:05:00</td>\n",
+       "      <td>13:18:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:15:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>364</th>\n",
+       "      <td>2024-12-30</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:41:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>2024-12-31</td>\n",
+       "      <td>06:06:00</td>\n",
+       "      <td>13:19:00</td>\n",
+       "      <td>16:42:00</td>\n",
+       "      <td>19:16:00</td>\n",
+       "      <td>20:31:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>366 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      time_date time_fajr time_zuhr  time_asr time_maghrib time_isha\n",
+       "0    2024-01-01  06:06:00  13:19:00  16:42:00     19:16:00  20:31:00\n",
+       "1    2024-01-02  06:07:00  13:20:00  16:42:00     19:17:00  20:31:00\n",
+       "2    2024-01-03  06:07:00  13:20:00  16:43:00     19:17:00  20:32:00\n",
+       "3    2024-01-04  06:08:00  13:21:00  16:43:00     19:18:00  20:32:00\n",
+       "4    2024-01-05  06:08:00  13:21:00  16:44:00     19:18:00  20:33:00\n",
+       "..          ...       ...       ...       ...          ...       ...\n",
+       "361  2024-12-27  06:04:00  13:17:00  16:40:00     19:14:00  20:29:00\n",
+       "362  2024-12-28  06:05:00  13:18:00  16:40:00     19:15:00  20:30:00\n",
+       "363  2024-12-29  06:05:00  13:18:00  16:41:00     19:15:00  20:30:00\n",
+       "364  2024-12-30  06:06:00  13:19:00  16:41:00     19:16:00  20:30:00\n",
+       "365  2024-12-31  06:06:00  13:19:00  16:42:00     19:16:00  20:31:00\n",
+       "\n",
+       "[366 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test = getDataFrameFromSqlServer\\\n",
+    "    (\"\"\"SELECT time_date, time_fajr, time_zuhr, time_asr, time_maghrib, time_isha \n",
+    "        FROM t_time_prayer_source_1 WITH(NOLOCK)\n",
+    "        WHERE time_date > '2023-12-31'\n",
+    "        ORDER BY time_date ASC;\n",
+    "    \"\"\")\n",
+    "\n",
+    "df_test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "init notebook objective 2\n"
+      "train data to total (out of 1.00): 0.86\n",
+      "test data to total (out of 1.00): 0.14\n"
      ]
     }
    ],
    "source": [
-    "print(\"init notebook objective 2\")"
+    "total_data = len(df_train) + len(df_test)\n",
+    "train_pct = len(df_train) / total_data\n",
+    "test_pct = len(df_test) / total_data\n",
+    "print(f\"train data to total (out of 1.00): {train_pct:.2f}\")\n",
+    "print(f\"test data to total (out of 1.00): {test_pct:.2f}\")"
    ]
   }
  ],
