--- a/python/data extraction and cleanup/request_data_googlesearch.ipynb
+++ b/python/data extraction and cleanup/request_data_googlesearch.ipynb
@@ -32,16 +32,31 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "C:\\Users\\azams\\AppData\\Local\\Temp\\ipykernel_14220\\2916470486.py:1: SyntaxWarning: invalid escape sequence '\\g'\n",
+      "  filePath = 'htmldata\\googlesearch_2024_04.txt'\n"
+     ]
+    }
+   ],
    "source": [
-    "GoogleSearchWidgetApr2024 = \"\"\" \n",
-    "\t\t\t\t\t\t\t<table class=\"bvYrdf\"><tbody><tr><td class=\"wUml3\"></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Fajr</div></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Sunrise</div></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Dhuhr</div></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Asr</div></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Maghrib</div></td><td class=\"GrGc6 dp1XAc\"><div class=\"M5Qt2d\">Isha</div></td></tr><tr data-day-index=\"0\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">1 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:07</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:22</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:22</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"1\" class=\"ptrow\"><td class=\"wUml3 fU9nkc xA7Scb\"><div class=\"M5Qt2d\">2 Apr</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">06:06</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">07:12</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">13:18</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">16:22</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">19:22</div></td><td class=\"GrGc6 fU9nkc iN17U\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"2\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">3 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:06</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:23</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:22</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"3\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">4 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:17</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:23</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:22</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"4\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">5 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:11</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:17</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:23</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:22</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"5\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">6 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:11</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:17</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:24</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:21</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"6\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">7 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:10</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:16</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:24</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:21</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:31</div></td></tr><tr data-day-index=\"7\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">8 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:10</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:16</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:25</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:21</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"8\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">9 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:03</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:10</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:16</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:25</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:21</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"9\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">10 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:03</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:09</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:16</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:25</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:21</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"10\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">11 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:02</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:09</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:15</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:26</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"11\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">12 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:02</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:09</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:15</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:26</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"12\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">13 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:01</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:08</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:15</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:26</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"13\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">14 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:01</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:08</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:15</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:26</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"14\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">15 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:01</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:08</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:14</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:27</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"15\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">16 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:00</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:07</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:14</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:27</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:20</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"16\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">17 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">06:00</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:07</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:14</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:27</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"17\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">18 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:59</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:07</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:14</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:28</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"18\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">19 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:59</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:06</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:28</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"19\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">20 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:59</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:06</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:28</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"20\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">21 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:58</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:06</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:28</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"21\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">22 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:58</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:06</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:29</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"22\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">23 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:57</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:13</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:29</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:29</div></td></tr><tr data-day-index=\"23\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">24 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:57</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:29</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"24\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">25 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:57</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:29</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:19</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"25\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">26 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:56</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:05</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:30</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"26\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">27 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:56</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:30</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"27\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">28 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:56</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:30</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"28\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">29 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:55</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:30</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr><tr data-day-index=\"29\" class=\"ptrow\"><td class=\"wUml3 fU9nkc\"><div class=\"M5Qt2d\">30 Apr</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">05:55</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">07:04</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">13:12</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">16:31</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">19:18</div></td><td class=\"GrGc6 fU9nkc\"><div class=\"M5Qt2d ptv\">20:30</div></td></tr></tbody></table>\n",
-    "\t\t\t\t\t\t\"\"\""
+    "filePath = 'htmldata\\googlesearch_2024_04.txt'\n",
+    "\n",
+    "with open(filePath, 'r') as file:\n",
+    "    lines = file.readlines()\n",
+    "    fileContent = ''.join(lines).replace(r'\\g+', '')\n",
+    "\n",
+    "GoogleSearchWidgetApr2024 = fileContent"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +440,7 @@
        "30  30 Apr  05:55   07:04  13:12  16:31   19:18  20:30"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +807,7 @@
        "30  2024-04-30  05:55:00  13:12:00  16:31:00  19:18:00  20:30:00"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
