update conn string pointing to 2nd local instance

--- a/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
+++ b/python/data extraction and cleanup/request_Data_esolatjakim.ipynb
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1425,17 +1425,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "## generate conn string for the pyodbc connection\n",
-    "connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\""
+    "connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1\\\\MSSQLSERVER2;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1458,7 +1458,7 @@
     "# conn.commit()\n",
     "## ALSO DON'T FORGET to close the connection after done!\n",
     "# cursor.close()\n",
-    "# conn.close()"
+    "conn.close()"
    ]
   }
  ],
