--- a/python/data extraction and cleanup/request_data_islamicfinder.ipynb
+++ b/python/data extraction and cleanup/request_data_islamicfinder.ipynb
@@ -924,21 +924,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "## use same technique in e-Solat JAKIM extraction to save df to db\n",
     "import pyodbc\n",
     "\n",
-    "connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1\\\\MSSQLSERVER2;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
     "conn = pyodbc.connect(connStr)\n",
     "# cursor = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
