--- a/python/data extraction and cleanup/request_data_muslimpro.ipynb
+++ b/python/data extraction and cleanup/request_data_muslimpro.ipynb
@@ -88,7 +88,7 @@
     "\n",
     "def insertDFtoDB(dfToInsert):\n",
     "    try:\n",
-    "        connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "        connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1\\\\MSSQLSERVER2;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
     "        conn = pyodbc.connect(connStr)\n",
     "        cursor = conn.cursor()\n",
     "\n",
