--- a/python/objective 1/objective_1.ipynb
+++ b/python/objective 1/objective_1.ipynb
@@ -40,7 +40,7 @@
     "    if (len(sql_select) == 0 or sql_select == \"\"):\n",
     "        return pd.DataFrame([])\n",
     "    \n",
-    "    connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "    connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1\\MSSQLSERVER2;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
     "    conn = pyodbc.connect(connStr)\n",
     "    try:\n",
     "        return pd.read_sql(sql=sql_select, con=conn)\n",
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
        "30  2024-01-31        -2        -2       -2           -1        -2"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1096,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
        "30       1166    1238  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1675,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
