--- a/python/objective 2/objective_2.ipynb
+++ b/python/objective 2/objective_2.ipynb
@@ -41,7 +41,7 @@
     "    if (len(sql_select) == 0 or sql_select == \"\"):\n",
     "        return pd.DataFrame([])\n",
     "    \n",
-    "    connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
+    "    connStr = \"DRIVER={ODBC Driver 17 for SQL Server};SERVER=INBOOK_X1\\MSSQLSERVER2;DATABASE=PrayerTimesDW;UID=sa;PWD=abcdE!2345;\"\n",
     "    conn = pyodbc.connect(connStr)\n",
     "    try:\n",
     "        return pd.read_sql(sql=sql_select, con=conn)\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
        "[2191 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "[366 rows x 6 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
